[package]
name = "resty"
version = "0.1.0"
description = "A simple JSON REST-API framework."
homepage = "https://github.com/tomusdrw/resty"
repository = "https://github.com/tomusdrw/resty"
readme = "README.md"
documentation = "https://docs.rs/resty"
license = "MIT"
keywords = ["hyper", "http", "rest", "json", "api"]
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]

categories = [
    "asynchronous",
    "web-programming::http-server",
]

[profile.release]
debug = false

[dependencies]
arrayvec = "0.4"
futures = "0.1"
hyper = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
